add categorical features in python/R packages.

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -12,6 +12,7 @@ export(lgb.Dataset)
 export(lgb.Dataset.construct)
 export(lgb.Dataset.create.valid)
 export(lgb.Dataset.save)
+export(lgb.Dataset.set.categorical)
 export(lgb.Dataset.set.reference)
 export(lgb.cv)
 export(lgb.dump)
